# pinn-examples

./: .envrc  LICENSE  README.md  harmonic_oscillator.ipynb  pyproject.toml
.virtual_documents/: harmonic_oscillator.ipynb
.virtual_documents/notebooks/: harmonic_oscillator.ipynb  heat_equation_1D.ipynb  helmholtz_2D.ipynb  laminar_flow_2D.ipynb
notebooks/: harmonic_oscillator.ipynb  heat_equation_1D.ipynb  helmholtz_2D.ipynb  laminar_flow_2D.ipynb
pinn-systems/systems/: system.py
pinns/systems/: harmonic_oscillator.py
