[project]
name = "pinn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepxde>=1.13.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "jupyterlab-lsp>=5.1.0",
    "kaleido==0.2.0",
    "plotly>=6.0.0",
    "python-lsp-server>=1.12.2",
    "torch>=2.6.0",
]
